mensaje de commit

--- a/app.html
+++ b/app.html
@@ -39,6 +39,9 @@
   <script src="parte5.js"></script>
   <script src="parte6.js"></script>
   <script src="script.js"></script>
+  <script src="app.js"></script>
+  <script src="server.js"></script>
+
 </body>
 </html>
 
